--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "deploy": "^1.0.3",
     "firebase": "^5.8.6",
+    "materialize-css": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-deploy": "0.0.15",
     "react-dom": "^16.8.4",
     "react-firebase": "^2.2.8",
