--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bootstrap": "^4.3.1",
     "deploy": "^1.0.3",
     "firebase": "^5.8.6",
-    "materialize-css": "^1.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6",
