--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
   ],
   "description": "## Preámbulo",
   "main": "login.html",
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-jest": "^24.7.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest": "^24.7.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MarceArratia/SCL007-BurgerQueen.git"
